# ExerciseGameUsingMotionDetection

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Application/: CMakeLists.txt
Application/src/: Application.cpp  Application.hpp  Constants.hpp  Utils.cpp  Utils.hpp  main.cpp
Application/src/Game/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp
Application/src/MotionDetection/: MotionDetection.cpp  MotionDetection.hpp
Game/: CMakeLists.txt
Game/src/: Game.cpp  Game.hpp  Player.cpp  Player.hpp  main.cpp
